--- a/Angular/tareas-frontend/angular.json
+++ b/Angular/tareas-frontend/angular.json
@@ -25,6 +25,7 @@
           "options": {
             "browser": "src/main.ts",
             "tsConfig": "tsconfig.app.json",
+            "polyfills": ["zone.js"],
             "assets": [
               {
                 "glob": "**/*",
@@ -83,6 +84,7 @@
           "builder": "@angular/build:karma",
           "options": {
             "tsConfig": "tsconfig.spec.json",
+            "polyfills": ["zone.js"],
             "assets": [
               {
                 "glob": "**/*",
